packages/isar_community_generator/test/errors/class/enum.dart
// only classes

import 'package:isar_community/isar.dart';

// ignore: invalid_annotation_target
@collection
enum Test { a, b, c }
